Removed extra charatcter

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
   <input type="text" id="query" name="query"><br><br>
   <label for="apiKey">API Key:</label><br>
   <input type="password" id="apiKey" name="apiKey"><br><br>
-  <button type="submit">Search</button>:q
+  <button type="submit">Search</button>
 
 </form>
 </div>
